# TensorRT-EinsumPlugin

./: README.md
einsum/: CMakeLists.txt  Einsum.cpp  Einsum.h
